[package]
name = "unver"
version = "1.1.1"
edition = "2021"

[profile.release]
opt-level = "z"       # optimize for size (crucial for OpenWRT)
lto = true            # link-time optimization
codegen-units = 1     # better optimization, slightly slower compile
strip = true          # strip symbols
debug = 0             # no debug info, faster compile

[[bin]]
name = "unver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net", "io-util", "fs", "process"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }

# HTTP proxy
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "tokio"] }
http-body-util = "0.1"
bytes = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Security: password hashing
argon2 = "0.5"

# Security: JWT
jsonwebtoken = "9"

# Security: random generation
rand = "0.8"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
ring = "0.17"

# Certificate generation (self-signed & ACME prep)
rcgen = "0.13"

# ACME client (DNS-01 / HTTP-01)
instant-acme = "0.8"

# Rate limiting
governor = "0.6"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
time = "0.3"
dotenvy = "0.15"
headers = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing-appender = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
flate2 = "1"
tar = "0.4"

# System calls (statvfs for host disk in Docker)
libc = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Force vendored OpenSSL for cross-compile (ARM64, etc.)
openssl = { version = "0.10", features = ["vendored"] }

# Native TLS for upstream HTTPS (OpenSSL, better compatibility)
tokio-native-tls = "0.3"

# System monitoring (CPU, memory, network)
sysinfo = "0.33"

# Memory allocator
mimalloc = "0.1"

# Stream combinators
futures-util = "0.3"

# HTTP body types (Frame)
http-body = "1"

[patch.crates-io]
instant-acme = { path = "../vendor/instant-acme" }
